--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@
 *.csv.rollback.tmp
 *.log
 buf.bsv
+buf.csv
+buf2.csv
 buf.dat
+buf_table.dat
 Files/settings/latest_launch.dat
 WordLab/stdout
 WordLab/WordLab
